2013-01-14  Leo Liu  <sdl.web@gmail.com>

	* calendar/calendar.el (calendar-redraw): Sync window-point and point.
	(Bug#13420)

2013-01-14  Glenn Morris  <rgm@gnu.org>

	* progmodes/compile.el (compilation-error-regexp-alist-alist):
	Fix interpretation of gnu line.col1-col2 format.  (Bug#13335)

2013-01-13  Fabián Ezequiel Gallina  <fgallina@cuca>

	* progmodes/python.el (python-nav-end-of-statement): Fix
	cornercase when handling multiline strings.

2013-01-13  Richard Stallman  <rms@gnu.org>

	* mail/sendmail.el (mail-position-on-field): Add doc string.

	* mail/rmailmm.el (rmail-insert-mime-forwarded-message): Get
	current message boundaries and pass them to
	message-forward-make-body-mime.  Minor style changes.

2013-01-13  Eli Zaretskii  <eliz@gnu.org>

	* cus-start.el (all): Avoid warnings about
	scroll-bar-adjust-thumb-portion on platforms where it is not
	defined.

2013-01-11  Jan Djärv  <jan.h.d@swipnet.se>

	* cus-start.el (all): Add scroll-bar-adjust-thumb-portion.

2013-01-13  Stefan Monnier  <monnier@iro.umontreal.ca>

	* jit-lock.el (jit-lock-debug-mode): New minor mode.
	(jit-lock--debug-fontifying): New var.
	(jit-lock--debug-fontify): New function.
	* subr.el (condition-case-unless-debug): Don't prevent catching the
	error, just let the debbugger run.
	* emacs-lisp/timer.el (timer-event-handler): Don't prevent debugging
	timer code and don't drop errors silently.

2013-01-12  Michael Albinus  <michael.albinus@gmx.de>

	* autorevert.el (auto-revert-notify-watch-descriptor): Give it
	`permanent-local' property.
	(auto-revert-notify-handler): Use `file-equal-p'.

2013-01-12  Eli Zaretskii  <eliz@gnu.org>

	* autorevert.el (auto-revert-notify-handler): Fix filtering of
	file notification by ACTION. For filtering by file name, compare
	only the non-directory part of the file name.

2013-01-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* autorevert.el: Use cl-lib instead of cl.

	* vc/vc-bzr.el (vc-bzr--sanitize-header): New function (bug#13307).